--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -138,9 +138,9 @@
                             <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
                             <div id="mc_embed_signup">
                                 <form action="https://blue-berry.us5.list-manage.com/subscribe/post?u=476dcbd6b813a7385560b85bd&amp;id=160dc3fd94" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                                    <div id="mc_embed_signup_scroll">
-                                        <h2>Newsletter</h2>
+                                    <div id="mc_embed_signup_scroll" class="row">
                                         <div class="col-md-6 col-xs-12">
+                                            <h2>Newsletter</h2>
                                             <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
                                             <div class="mc-field-group">
                                                 <label for="mce-EMAIL">eMail Address / eMail-Adresse  <span class="asterisk">*</span>
@@ -213,7 +213,6 @@
                     </div>
                 {% endif %}
                 <!-- ./NEWSLETTER ARREA -->
-
             </div>
 
             {% set ordersPerPage = config("Ceres.my_account.orders_per_page") %}
