--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -403,15 +403,19 @@ h1.price {
     display: block !important;
 }
 
-#mc_embed_signup{
+#mc_embed_signup {
     background:#fff;
     clear:left;
     font:14px Helvetica,Arial,sans-serif;
 }
 
 #mc-embedded-subscribe-form input[type=checkbox] {
-    display: inline;
-    width: auto;
+    width: auto !important;
+    display: inline !important;
+    margin-right: 10px;
+}
+
+#mc-embedded-subscribe-form input[type=radio] {
     margin-right: 10px;
 }
 
