--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -204,7 +204,10 @@
                                                 <div class="response" id="mce-success-response" style="display:none"></div>
                                             </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                                             <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_476dcbd6b813a7385560b85bd_160dc3fd94" tabindex="-1" value=""></div>
-                                            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                                        </div>
+                                        <div class="clear">
+                                        <div class="col-md-12">
+                                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
                                         </div>
                                     </div>
                                 </form>
