--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -134,6 +134,7 @@
                 {% if testVariable == '1' %}
                     <div class="row">
                         <div class="col-md-12">
+                            {{ userObject }}
                             <!-- Begin Mailchimp Signup Form -->
                             <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
                             <div id="mc_embed_signup">
@@ -150,7 +151,7 @@
                                             <div class="mc-field-group">
                                                 <label for="mce-FNAME">First Name / Vorname  <span class="asterisk">*</span>
                                             </label>
-                                                <input type="text" value="{{ userObject.firstName }}" disbaled name="FNAME" class="required" id="mce-FNAME">
+                                                <input type="text" value="{{ userObject.firstName }}" disabled name="FNAME" class="required" id="mce-FNAME">
                                             </div>
                                             <div class="mc-field-group">
                                                 <label for="mce-LNAME">Last Name / Nachname  <span class="asterisk">*</span>
@@ -160,7 +161,7 @@
                                             <div class="mc-field-group">
                                                 <label for="mce-COMPANY">Company / Firma  <span class="asterisk">*</span>
                                             </label>
-                                                <input type="text" value="" name="COMPANY" class="required" id="mce-COMPANY">
+                                                <input type="text" value="{{ userObject.companyName }}" name="COMPANY" disabled class="required" id="mce-COMPANY">
                                             </div>
                                             <div class="mc-field-group input-group">
                                                 <strong>Language / Sprache </strong>
