--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -134,7 +134,7 @@
                 {% if testVariable == '1' %}
                     <div class="row">
                         <div class="col-md-12">
-                            {{ userObject.accounts.[0].companyName }}
+                            {{ userObject.accounts }}
                             <!-- Begin Mailchimp Signup Form -->
                             <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
                             <div id="mc_embed_signup">
