Update nl zone: 17.07.2020:30

--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -134,8 +134,7 @@
                 {% if testVariable == '1' %}
                     <div class="row">
                         <div class="col-md-12">
-
-                            {{ userObjectForTemplate }}
+                            {{ frontend.Account }}
                             <!-- Begin Mailchimp Signup Form -->
                             <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
                             <div id="mc_embed_signup">
