Update the styles of form: 23.07.2020-2

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -435,7 +435,7 @@ h1.price {
 }
 
 #mc_embed_signup form {
-    padding: 20px 15px;
+    padding: 20px 15px !important;
 }
 
 #mc_embed_signup form .input-group {
