Update the styles of form: 23.07.2020-4

--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -147,22 +147,22 @@
                                                     <div class="mc-field-group">
                                                         <label for="mce-EMAIL">eMail Address / eMail-Adresse  <span class="asterisk">*</span>
                                                     </label>
-                                                        <input type="email" value="{{ userObject.email }}" disabled name="EMAIL" class="required email" id="mce-EMAIL">
+                                                        <input type="email" value="cristtian.gheorghe@gmail.com" disabled name="EMAIL" class="required email" id="mce-EMAIL">
                                                     </div>
                                                     <div class="mc-field-group">
                                                         <label for="mce-FNAME">First Name / Vorname  <span class="asterisk">*</span>
                                                     </label>
-                                                        <input type="text" value="{{ userObject.firstName }}" disabled name="FNAME" class="required" id="mce-FNAME">
+                                                        <input type="text" value="{{ userObject.firstName }}" disabled name="FNAME" id="mce-FNAME">
                                                     </div>
                                                     <div class="mc-field-group">
                                                         <label for="mce-LNAME">Last Name / Nachname  <span class="asterisk">*</span>
                                                     </label>
-                                                        <input type="text" value="{{ userObject.lastName }}" disabled name="LNAME" class="required" id="mce-LNAME">
+                                                        <input type="text" value="{{ userObject.lastName }}" disabled name="LNAME"  id="mce-LNAME">
                                                     </div>
                                                     <div class="mc-field-group">
                                                         <label for="mce-COMPANY">Company / Firma  <span class="asterisk">*</span>
                                                     </label>
-                                                        <input type="text" value="{{ userObject.accounts.0.companyName }}" name="COMPANY" disabled class="required" id="mce-COMPANY">
+                                                        <input type="text" value="{{ userObject.accounts.0.companyName }}" name="COMPANY" disabled id="mce-COMPANY">
                                                     </div>
                                                     <div class="mc-field-group input-group">
                                                         <strong>Language / Sprache </strong>
