Update the styles of form: 23.07.2020-5

--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -150,19 +150,19 @@
                                                         <input type="email" value="cristtian.gheorghe@gmail.com" disabled name="EMAIL" class="required email" id="mce-EMAIL">
                                                     </div>
                                                     <div class="mc-field-group">
-                                                        <label for="mce-FNAME">First Name / Vorname  <span class="asterisk">*</span>
+                                                        <label for="mce-FNAME">First Name / Vorname
                                                     </label>
-                                                        <input type="text" value="{{ userObject.firstName }}" disabled name="FNAME" id="mce-FNAME">
+                                                        <input type="text" value="{{ userObject.firstName }}" disabled class="" name="FNAME" id="mce-FNAME">
                                                     </div>
                                                     <div class="mc-field-group">
-                                                        <label for="mce-LNAME">Last Name / Nachname  <span class="asterisk">*</span>
+                                                        <label for="mce-LNAME">Last Name / Nachname
                                                     </label>
-                                                        <input type="text" value="{{ userObject.lastName }}" disabled name="LNAME"  id="mce-LNAME">
+                                                        <input type="text" value="{{ userObject.lastName }}" disabled class="" name="LNAME"  id="mce-LNAME">
                                                     </div>
                                                     <div class="mc-field-group">
-                                                        <label for="mce-COMPANY">Company / Firma  <span class="asterisk">*</span>
+                                                        <label for="mce-COMPANY">Company / Firma
                                                     </label>
-                                                        <input type="text" value="{{ userObject.accounts.0.companyName }}" name="COMPANY" disabled id="mce-COMPANY">
+                                                        <input type="text" value="{{ userObject.accounts.0.companyName }}" class="" name="COMPANY" disabled id="mce-COMPANY">
                                                     </div>
                                                     <div class="mc-field-group input-group">
                                                         <strong>Language / Sprache </strong>
