--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -147,7 +147,7 @@
                                                     <div class="mc-field-group">
                                                         <label for="mce-EMAIL">eMail Address / eMail-Adresse  <span class="asterisk">*</span>
                                                     </label>
-                                                        <input type="email" value="cristtian.gheorghe@gmail.com" disabled name="EMAIL" class="required email" id="mce-EMAIL">
+                                                        <input type="email" value="{{ userObject.email }}" disabled name="EMAIL" class="required email" id="mce-EMAIL">
                                                     </div>
                                                     <div class="mc-field-group">
                                                         <label for="mce-FNAME">First Name / Vorname
