--- a/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_Details.twig
@@ -75,7 +75,8 @@
             <b>{% if item.documents[0].data.texts.lang == 'en' %}Stock{% endif %}{% if item.documents[0].data.texts.lang == 'de' %}Verfügbar{% endif %}: </b>
         </div>
         <div class="col-xs-6 col-md-7">
-            <span>${ currentVariation.stock.net }</span>
+            <span v-if="currentVariation.stock.net <= 25">${ currentVariation.stock.net }</span>
+            <span v-else >25+</span>
         </div>
     </div>
 </div>
