Update the code with class

--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -167,8 +167,8 @@
                                                 </div>
                                                 <div class="mc-field-group input-group">
                                                     <strong>Language / Sprache </strong>
-                                                    <ul><li><input type="radio" value="16" name="group[11173]" id="mce-group[11173]-11173-0"><label for="mce-group[11173]-11173-0">English</label></li>
-                                                    <li><input type="radio" value="32" name="group[11173]" id="mce-group[11173]-11173-1"><label for="mce-group[11173]-11173-1">Deutsch</label></li>
+                                                    <ul><li><input type="radio" value="16" class="input-ea4b311b77" name="group[11173]" id="mce-group[11173]-11173-0"><label for="mce-group[11173]-11173-0">English</label></li>
+                                                    <li><input type="radio" value="32" class="input-224325073e" name="group[11173]" id="mce-group[11173]-11173-1"><label for="mce-group[11173]-11173-1">Deutsch</label></li>
                                                     </ul>
                                                 </div>
                                             </div>
