Update the class at checkbox

--- a/resources/views/MyAccount/MyAccountView.twig
+++ b/resources/views/MyAccount/MyAccountView.twig
@@ -175,12 +175,12 @@
                                             <div class="col-md-6 col-xs-12">
                                                 <div class="mc-field-group input-group">
                                                     <strong>Product Categories / Produktkategorien </strong>
-                                                    <ul><li><input type="checkbox" value="128" name="group[11169][128]" id="mce-group[11169]-11169-0" class="input-9295dabe4c"><label for="mce-group[11169]-11169-0">Important Information / Wichtige Informationen</label></li>
-                                                <li><input type="checkbox" value="1" name="group[11169][1]" id="mce-group[11169]-11169-1" class="input-e61be3f41e"><label for="mce-group[11169]-11169-1">Eyewear / Brillen &amp; Sonnenbrillen</label></li>
-                                                <li><input type="checkbox" value="2" name="group[11169][2]" id="mce-group[11169]-11169-2" class="input-3ae962b18a"><label for="mce-group[11169]-11169-2">Watches &amp; Jewelry / Uhren &amp; Schmuck</label></li>
-                                                <li><input type="checkbox" value="4" name="group[11169][4]" id="mce-group[11169]-11169-3" class="input-e1cf55d9a4"><label for="mce-group[11169]-11169-3">Handbags &amp; Accessories / Handtaschen &amp; Accessoires</label></li>
+                                                    <ul><li><input type="checkbox" value="128" class="input-9295dabe4c" name="group[11169][128]" id="mce-group[11169]-11169-0" ><label for="mce-group[11169]-11169-0">Important Information / Wichtige Informationen</label></li>
+                                                <li><input type="checkbox" value="1" name="group[11169][1]" class="input-e61be3f41e" id="mce-group[11169]-11169-1"><label for="mce-group[11169]-11169-1">Eyewear / Brillen &amp; Sonnenbrillen</label></li>
+                                                <li><input type="checkbox" value="2" name="group[11169][2]" class="input-3ae962b18a" id="mce-group[11169]-11169-2" ><label for="mce-group[11169]-11169-2">Watches &amp; Jewelry / Uhren &amp; Schmuck</label></li>
+                                                <li><input type="checkbox" value="4" name="group[11169][4]" class="input-e1cf55d9a4" id="mce-group[11169]-11169-3" ><label for="mce-group[11169]-11169-3">Handbags &amp; Accessories / Handtaschen &amp; Accessoires</label></li>
                                                 <li><input type="checkbox" value="8" name="group[11169][8]" id="mce-group[11169]-11169-4" class="input-b2c4ad2f85"><label for="mce-group[11169]-11169-4">Clothing &amp; Shoes / Kleidung &amp; Schuhe</label></li>
-                                                <li><input type="checkbox" value="64" name="group[11169][64]" id="mce-group[11169]-11169-5" class="input-75bcd16391"><label for="mce-group[11169]-11169-5">Electronics / Elektronik</label></li>
+                                                <li><input type="checkbox" value="64" name="group[11169][64]" class="input-75bcd16391" id="mce-group[11169]-11169-5" ><label for="mce-group[11169]-11169-5">Electronics / Elektronik</label></li>
                                                 </ul>
                                                 </div>
                                                 <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
