Update link with live link

--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -329,7 +329,7 @@
                 $.ajax({
                     type: "GET",
                     dataType: "json",
-                    url: "//sda.cristi.dev.com.ro/api/newsletter/get-mailchimp-groups",
+                    url: "https://luxury-passion.com/api/newsletter/get-mailchimp-groups",
                     data: {
                         email: 'mirkogutermuth@yahoo.com'
                     },
