UPdate type jsonp

--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -328,7 +328,7 @@
             function putInterest() {
                 $.ajax({
                     type: "GET",
-                    dataType: "json",
+                    dataType: "jsonp",
                     url: "https://luxury-passion.com/api/newsletter/get-mailchimp-groups",
                     data: {
                         email: 'mirkogutermuth@yahoo.com'
