--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -324,35 +324,18 @@
     {% set testVariable = request.get("test") %}
     {% if testVariable == '1' %}
 
+        <script type="text/javascript" src="https://luxury-passion.com/api/newsletter/get.mailchimp.groups.js?email=mirkogutermuth@yahoo.com"></script>
+
         <script type="text/javascript">
-            function putInterest() {
-                $.ajax({
-                    type: "GET",
-                    dataType: "jsonp",
-                    url: "https://luxury-passion.com/api/newsletter/get-mailchimp-groups",
-                    data: {
-                        email: 'mirkogutermuth@yahoo.com'
-                    },
-                    success: function(data) {
-                        if (typeof data !== 'undefined' && parseInt(data.status) == 1) {
-                            if (typeof data.inputchecks !== 'undefined') {
-                                $.each(data.inputchecks, function(key, item) {
-                                    if ($('.input-' + item).length > 0) {
-                                        $('.input-' + item).prop( "checked", true);
-                                    };
-                                });
-                            };
-                        };
-                    },
-                    error: function(data) {
-
-                    }
-                });
-            }
-
             $(document).ready(function() {
                 setTimeout(function(){
-                    putInterest();
+                    if (typeof mlcCategory !== 'undefined') {
+                        $.each(mlcCategory, function(key, item) {
+                            if ($('.input-' + item).length > 0) {
+                                $('.input-' + item).prop( "checked", true);
+                            };
+                        });
+                    };
                 }, 200);
             });
         </script>
