--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -336,6 +336,14 @@
                             };
                         });
                     };
+
+                    if (typeof mlcMarketing !== 'undefined') {
+                        $.each(mlcMarketing, function(key, item) {
+                            if ($('.gdpr-' + item).length > 0) {
+                                $('.gdpr-' + item).prop( "checked", true);
+                            };
+                        });
+                    };
                 }, 200);
             });
         </script>
