Update for change links 1

--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -72,9 +72,9 @@
         {% endif %}
     </div>
 
-
+    {% if userObjectForTemplate.classId == 4 or userObjectForTemplate.classId == 5 %}
         {% include getPartial('footer') %}
-
+    {% endif %}
 
     {% block PartialFooter %}{% endblock %}
 
