--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -446,6 +446,16 @@ h1.price {
     border-radius: 0px;
     border: 1px solid #dee2e6;
 }
+
+.container-max.page-content h1 {
+    margin-top: 1rem;
+}
+
+.container-max.page-content hr.my-5 {
+    margin-top: 1rem !important;
+    margin-bottom: 1rem !important;
+}
+
 @media (min-width: 992px) {
     #mainNavbarCollapsable ul.mainmenu>li>ul {
         background-color: #ffffff;
