--- a/resources/views/Item/Components/SingleItem/SingleItem_InformationTable.twig
+++ b/resources/views/Item/Components/SingleItem/SingleItem_InformationTable.twig
@@ -21,7 +21,7 @@
             <div class="tab-pane active overflow-auto" :id="'details-' + currentVariation.variation.id" role="tabpanel" >
                 <div class="my-4">
                     <div slot="MyProperty" class="my-property">
-                        <div class="row">
+                        <div class="row aaaaaaaa">
                             {% for property in item.documents[0].data.properties %}
                                 {% if property.texts.value != '' or property.selection.name != '' or  property.selection.description  != '' or property.valueFloat != '' or property.valueInt != '' %}
                                     <div class="col-xs-6 col-md-5">
