Verify the position 4

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -212,11 +212,9 @@
                                 <div class="tab-pane active overflow-auto" :id="'details-' + currentVariation.variation.id" role="tabpanel">
                                     <div class="my-4" v-if="currentVariation.properties">
                                         <div slot="MyProperty" class="my-property">
-                                            {% set aaa = 1 %}
-                                            <div class="row fffff ccc" v-for="propertyRow in currentVariation.properties">
-                                                {% set aaa = aaa + 1 %}
+                                            <div class="row " v-for="propertyRow in currentVariation.properties">
                                                 <div class="col-xs-6 col-md-5" v-if="propertyRow.texts.value !== '' || propertyRow.selection.name !== '' || propertyRow.selection.description !== '' || propertyRow.valueFloat !== '' || propertyRow.valueInt !== ''">
-                                                    <b>${ propertyRow.property.names.name }: {{ set }}</b>
+                                                    <b>${ propertyRow.property.names.name }: </b>
                                                 </div>
                                                 <div class="col-xs-6 col-md-7" v-if="propertyRow.texts.value !== '' || propertyRow.selection.name !== '' || propertyRow.selection.description !== '' || propertyRow.valueFloat !== '' || propertyRow.valueInt !== ''">
                                                     <span v-if="propertyRow.texts.value">${ propertyRow.texts.value  }</span>
