Verify the position 5

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -190,6 +190,7 @@
                     </div>
 
                     <div class="col-12 col-md-7">
+                        {$ currentVariation.properties }
                         <!-- ITEM DESCRIPTION -->
                         <div class="my-5">
                             <ul class="nav nav-tabs" role="tablist">
