Verify the position 12

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -213,8 +213,8 @@
                                 <div class="tab-pane active overflow-auto" :id="'details-' + currentVariation.variation.id" role="tabpanel">
                                     <div class="my-4" v-if="currentVariation.properties">
                                         <div slot="MyProperty" class="my-property">
-                                            <div class="row" v-for="n in 300">
-                                                <div class="row col-xs-12 col-md-12" v-for="propertyRow in currentVariation.properties" v-if="n ==  propertyRow.property.position">
+
+                                                <div class="row row-properties propertyRow.property.position {{ propertyRow.property.position }}" datav-for="propertyRow in currentVariation.properties">
                                                     <div class="col-xs-6 col-md-5 " v-if="propertyRow.texts.value !== '' || propertyRow.selection.name !== '' || propertyRow.selection.description !== '' || propertyRow.valueFloat !== '' || propertyRow.valueInt !== ''">
                                                         <b>${ propertyRow.property.names.name }: </b>
                                                     </div>
@@ -226,7 +226,7 @@
                                                         <span v-if="propertyRow.valueInt">${ propertyRow.valueInt }Millimeter</span>
                                                     </div>
                                                 </div>
-                                            </div>
+
                                         </div>
                                     </div>
                                 </div>
