--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -214,7 +214,7 @@
                                     <div class="my-4" v-if="currentVariation.properties">
                                         <div slot="MyProperty" class="my-property">
 
-                                                <div class="row row-properties propertyRow.property.position {{ propertyRow.property.position }}" datav-for="propertyRow in currentVariation.properties">
+                                                <div class="row row-properties {$ propertyRow.property.position }" datav-for="propertyRow in currentVariation.properties">
                                                     <div class="col-xs-6 col-md-5 " v-if="propertyRow.texts.value !== '' || propertyRow.selection.name !== '' || propertyRow.selection.description !== '' || propertyRow.valueFloat !== '' || propertyRow.valueInt !== ''">
                                                         <b>${ propertyRow.property.names.name }: </b>
                                                     </div>
