--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -214,16 +214,18 @@
                                     <div class="my-4" v-if="currentVariation.properties">
                                         <div slot="MyProperty" class="my-property">
 
-                                                <div class="row row-properties {$ propertyRow.property.position }" datav-for="propertyRow in currentVariation.properties">
-                                                    <div class="col-xs-6 col-md-5 " v-if="propertyRow.texts.value !== '' || propertyRow.selection.name !== '' || propertyRow.selection.description !== '' || propertyRow.valueFloat !== '' || propertyRow.valueInt !== ''">
-                                                        <b>${ propertyRow.property.names.name }: </b>
-                                                    </div>
-                                                    <div class="col-xs-6 col-md-7" v-if="propertyRow.texts.value !== '' || propertyRow.selection.name !== '' || propertyRow.selection.description !== '' || propertyRow.valueFloat !== '' || propertyRow.valueInt !== ''">
-                                                        <span v-if="propertyRow.texts.value">${ propertyRow.texts.value  }</span>
-                                                        <span v-if="propertyRow.selection.name">${ propertyRow.selection.name }</span>
-                                                        <span v-if="propertyRow.selection.description">${ propertyRow.selection.description }</span>
-                                                        <span v-if="propertyRow.valueFloat">${ propertyRow.valueFloat } Millimeter</span>
-                                                        <span v-if="propertyRow.valueInt">${ propertyRow.valueInt }Millimeter</span>
+                                                <div class="row row-properties " datav-for="propertyRow in currentVariation.properties">
+                                                    <div class="row col-xs-12 col-md-12">
+                                                        <div class="col-xs-6 col-md-5 " v-if="propertyRow.texts.value !== '' || propertyRow.selection.name !== '' || propertyRow.selection.description !== '' || propertyRow.valueFloat !== '' || propertyRow.valueInt !== ''">
+                                                            <b>${ propertyRow.property.names.name }: </b>
+                                                        </div>
+                                                        <div class="col-xs-6 col-md-7" v-if="propertyRow.texts.value !== '' || propertyRow.selection.name !== '' || propertyRow.selection.description !== '' || propertyRow.valueFloat !== '' || propertyRow.valueInt !== ''">
+                                                            <span v-if="propertyRow.texts.value">${ propertyRow.texts.value  }</span>
+                                                            <span v-if="propertyRow.selection.name">${ propertyRow.selection.name }</span>
+                                                            <span v-if="propertyRow.selection.description">${ propertyRow.selection.description }</span>
+                                                            <span v-if="propertyRow.valueFloat">${ propertyRow.valueFloat } Millimeter</span>
+                                                            <span v-if="propertyRow.valueInt">${ propertyRow.valueInt }Millimeter</span>
+                                                        </div>
                                                     </div>
                                                 </div>
 
